Auth implementation with default login page
